--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -1,5 +1,5 @@
 main {
-    background-color: yellow;
+    background-color: white;
     height: 80%;
     display: flex;
     flex-direction: column;
@@ -9,27 +9,37 @@ main {
     .container {
         width: 80%;
         height: 80%;
-        background-color: white;
         overflow: auto;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
 
         .card {
-            height: 150px;
-            width: 100px;
-            background-color: lightgreen;
+            height: 300px;
+            width: 200px;
+            background-color: black;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            margin: 15px;
+            border-radius: 15px;
 
             .img {
-                width: 50px;
-                height: 50px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                width: 170px;
+                height: 170px;
 
                 img {
                     width: 100%;
+                    height: 100%;
                 }
+            }
+
+            p {
+                color: white;
             }
 
         }
     }
-
-
 }
